# clean_history_data

./: pyproject.toml  run_clean.sh
config/: clean_list.py  crontab.conf
src/: cleaner.py  main.py
tests/: inspect_fixtures.py  test_cleaner.py
